fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 body {
     background: #f0ead6;
     font-family: 'Rubik', sans-serif;
-    /*font-family: 'Slabo 27px', serif;*/
     margin-top: 150px;
 }
 
 h1 {
-    font-size: 85px;
+    font-size: 80px;
 }
 
 h2 {
+    font-size: 26px;
     margin-top: 30px;
     max-width: 450px;
 }
@@ -29,7 +29,7 @@ a:hover {
 }
 
 .container {
-    max-width: 820px;
+    max-width: 800px;
 }
 
 .profile {
